# azure-ai-code-review

./: .env.example  .flake8  .gitignore  ExtensionSetup.md  LICENSE  PERMISSION_SETUP.md  README.md  SETUP.md  USING_PAT_TOKEN.md  azure-pipelines-ci.yml  config.example.yaml  overview.md  pyproject.toml  requirements.txt  validate_setup.py  vss-extension.json
.github/workflows/: ci.yml
examples/: azure_devops_example.py  llm_review_example.py
pipelines/: ai-code-review-template.yml  example-pipeline.yml
scripts/: build.ps1  run_tests.py  sync-version.ps1
src/azure_devops/: __init__.py  auth.py  client.py  comment_client.py  models.py  pr_client.py
src/config/: __init__.py  config.py
src/llm/: __init__.py  anthropic_provider.py  azure_openai.py  base.py  ollama_provider.py  openai_provider.py  parser.py  prompts.py  review_client.py
src/utils/: logger.py
task/: .taskkey  jest.config.js  package-lock.json  package.json  requirements.txt  task.json  tsconfig.json
task/scripts/: review_pr.py
task/src/: index.ts
task/src_python/src/: __init__.py
task/src_python/src/azure_devops/: client.py  comment_client.py  pr_client.py
task/src_python/src/config/: config.py
task/src_python/src/llm/: anthropic_provider.py  azure_openai.py  base.py  openai_provider.py  parser.py  prompts.py  review_client.py
task/src_python/src/utils/: __init__.py
task/tests/: index.test.ts  package.json
tests/: conftest.py  test_azure_devops.py  test_config.py  test_integration.py  test_llm.py
